--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       border-radius: 50%;
     }
     .landing-bg {
-      background-image: url('https://images.pexels.com/photos/747418/pexels-photo-747418.jpeg?auto=compress&cs=tinysrgb&w=1600');
+      background-image: url('https://images.pexels.com/photos/1285625/pexels-photo-1285625.jpeg?auto=compress&cs=tinysrgb&w=1600');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -60,8 +60,18 @@
       align-items: center;
       color: white;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
-      /* Fallback base64 placeholder */
+      /* Fallback base64 gray */
       background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAADUlEQVR42mP8z8DwHwAEhQGAdeS9bAAAAABJRU5ErkJggg==');
+      position: relative;
+    }
+    .landing-bg img.fallback {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      z-index: -1;
     }
     .nav-bar {
       position: fixed;
@@ -70,27 +80,45 @@
       right: 0;
       z-index: 1000;
       background-color: #1f2937;
-      padding: 1rem;
-      text-align: center;
+      padding: 0.75rem 1rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    #landing-page.active ~ .nav-bar {
+      display: none;
+    }
+    .nav-bar button {
+      background-color: #3b82f6;
+      color: white;
+      padding: 0.5rem 1rem;
+      border-radius: 0.375rem;
+      font-size: 0.875rem;
+      font-weight: 500;
+      border: none;
+      cursor: pointer;
+    }
+    .nav-bar button:hover {
+      background-color: #2563eb;
     }
     .nav-bar select {
       background-color: #3b82f6;
       color: white;
       padding: 0.5rem 1rem;
       border-radius: 0.375rem;
-      font-size: 1rem;
+      font-size: 0.875rem;
       font-weight: 500;
       border: none;
       outline: none;
-      width: 200px;
+      width: 150px;
     }
   </style>
 </head>
 <body class="bg-gray-100 font-sans">
   <!-- Navigation Bar -->
   <div class="nav-bar">
+    <button id="home-btn">Home</button>
     <select id="nav-dropdown">
-      <option value="landing">Home</option>
       <option value="itineraries">Itineraries</option>
       <option value="map">Map</option>
       <option value="messenger">Messenger</option>
@@ -99,15 +127,20 @@
 
   <!-- Landing Page -->
   <div id="landing-page" class="tab-content active landing-bg">
+    <img 
+      src="https://images.pexels.com/photos/1285625/pexels-photo-1285625.jpeg?auto=compress&cs=tinysrgb&w=1600" 
+      alt="Tuscany Landscape Fallback" 
+      class="fallback"
+      onerror="this.src='https://via.placeholder.com/800x600?text=Tuscany+Image+Failed'"
+    >
     <h1 class="text-4xl font-bold mb-4 text-center">Tuscany Day Trip Adventure</h1>
-    <p class="text-xl mb-6 text-center">Join us on June 16, 2025, for a journey through Chianti’s vineyards!</p>
-    <div id="countdown" class="text-2xl mb-8 text-center">
+    <div id="countdown" class="text-2xl text-center">
       <span id="days">0</span> Days <span id="hours">0</span> Hours <span id="minutes">0</span> Minutes <span id="seconds">0</span> Seconds
     </div>
   </div>
 
   <!-- Main Content -->
-  <div id="main-content" class="max-w-4xl mx-auto p-4 pt-16">
+  <div id="main-content" class="max-w-4xl mx-auto p-4 pt-20">
     <!-- Itineraries Tab -->
     <div id="itineraries-content" class="tab-content">
       <header class="text-center mb-8">
@@ -270,7 +303,7 @@
         </ul>
       </section>
 
-      <!-- Greve in Chianti Photos -->
+      <!-- Greve in Chianti Gallery -->
       <section class="my-8">
         <h2 class="text-2xl font-semibold text-gray-800 mb-4">Greve in Chianti Gallery</h2>
         <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
@@ -300,6 +333,60 @@
               onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
             >
             <p class="text-sm text-gray-600 mt-2 text-center">Vineyards near Greve</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/747418/pexels-photo-747418.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Tuscan countryside near Greve" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Tuscan countryside near Greve</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/5409751/pexels-photo-5409751.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Greve valley landscape" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Greve valley landscape</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/2086030/pexels-photo-2086030.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Chianti vineyards near Greve" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Chianti vineyards near Greve</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/1269968/pexels-photo-1269968.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Greve’s rolling hills" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Greve’s rolling hills</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/20832069/pexels-photo-20832069.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Historic Greve village" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Historic Greve village</p>
+          </div>
+          <div>
+            <img 
+              src="https://images.pexels.com/photos/46148/pexels-photo-46148.jpeg?auto=compress&cs=tinysrgb&w=800" 
+              alt="Tuscan stone buildings in Greve" 
+              class="w-full h-48 object-cover rounded-lg shadow-md"
+              onerror="this.src='https://via.placeholder.com/800x600?text=Greve+Image+Failed'"
+            >
+            <p class="text-sm text-gray-600 mt-2 text-center">Tuscan stone buildings in Greve</p>
           </div>
         </div>
       </section>
@@ -363,23 +450,33 @@
       updateCountdown();
       setInterval(updateCountdown, 1000);
 
-      // Navigation Dropdown
+      // Navigation
       const navDropdown = document.getElementById('nav-dropdown');
+      const homeBtn = document.getElementById('home-btn');
       const tabContents = document.querySelectorAll('.tab-content');
       const landingPage = document.getElementById('landing-page');
       const mainContent = document.getElementById('main-content');
 
-      navDropdown.addEventListener('change', () => {
-        const selectedTab = navDropdown.value;
+      function navigateTo(tab) {
         tabContents.forEach(c => c.classList.remove('active'));
-        if (selectedTab === 'landing') {
+        if (tab === 'landing') {
           landingPage.classList.add('active');
           mainContent.classList.add('hidden');
+          navDropdown.value = 'itineraries'; // Reset dropdown
         } else {
           landingPage.classList.remove('active');
           mainContent.classList.remove('hidden');
-          document.getElementById(`${selectedTab}-content`).classList.add('active');
+          document.getElementById(`${tab}-content`).classList.add('active');
+          navDropdown.value = tab;
         }
+      }
+
+      navDropdown.addEventListener('change', () => {
+        navigateTo(navDropdown.value);
+      });
+
+      homeBtn.addEventListener('click', () => {
+        navigateTo('landing');
       });
 
       // Expanding Panels
