--- a/index.html
+++ b/index.html
@@ -76,6 +76,17 @@
       color: white;
       text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
       text-align: center;
+      max-width: 90%; /* Prevent overflow on narrow screens */
+      word-break: break-word; /* Ensure text wraps on small screens */
+    }
+    .centered-content h1 {
+      font-size: 8vw; /* Responsive font size: 8% of viewport width */
+      font-weight: 700;
+      line-height: 1.2;
+    }
+    .centered-content #countdown {
+      font-size: 5vw; /* Responsive font size: 5% of viewport width */
+      margin-top: 1rem;
     }
     .nav-bar {
       position: fixed;
@@ -210,9 +221,9 @@
         onerror="this.src='https://via.placeholder.com/800x600?text=Tuscany+Image+Failed'"
       >
       <div class="centered-content">
-        <h1 class="text-4xl font-bold text-center">Italy 2025</h1>
-        <div id="countdown" class="text-2xl text-center mt-4">
-          <span id="days">0</span> Days <span id="hours">0</span> Hours <span id="minutes">0</span> Minutes <span id="seconds">0</span> Seconds
+        <h1>Italy 2025</h1>
+        <div id="countdown">
+          <span id="days">0</span> Days
         </div>
       </div>
     </div>
@@ -682,13 +693,7 @@
           return;
         }
         const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        const seconds = Math.floor((distance % (1000 * 60)) / 1000);
         document.getElementById('days').textContent = days;
-        document.getElementById('hours').textContent = hours;
-        document.getElementById('minutes').textContent = minutes;
-        document.getElementById('seconds').textContent = seconds;
       };
       updateCountdown();
       setInterval(updateCountdown, 1000);
